--- a/background.html
+++ b/background.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-      <iframe id="frame" src="http://www.youtube.com/embed/oqMmCIf8c1I?autoplay=1"></iframe>
-        <script src="background.js"></script>
-  </body>
+
+<head>
+</head>
+
+<body>
+  <iframe id="frame" style="width: 0; height: 0; border: 0; border: none; position: absolute;"></iframe>
+  <script src="background.js"></script>
+</body>
+
 </html>
